# emoji-kb

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: main.yaml
include/: emoji.h  emojikeyboard.h  emojireader.h
resources/: resources.qrc
src/: emoji.cpp  emojikeyboard.cpp  emojireader.cpp  main.cpp
